# deeplearning_demos

./: .gitmodules  README.md  requirements.txt  setup.py  slurm.sbatch  slurm_cu11.sbatch
deeplearning_demos/: __init__.py  client.py  dlserver.py  dmoz.py  segmentation_server.py  server.py  utils.py  video_grabber.py
deeplearning_demos/configs/: bts.yaml  detectron2-panoptic-large.yaml  detectron2-panopticseg.yaml  detectron2_instance.yaml  detectron2_keypoints.yaml  segmentation_hrnetv2_c1.yaml  segmentation_mobilenet.yaml  segmentation_resnet101_upernet.yaml
deeplearning_demos/models/: __init__.py  bts.py  detectron2.py  semantic_segmentation_pytorch.py
dlclient/: pyproject.toml
dlclient/dlclient/: cli_client.py  client.py  utils.py  video_grabber.py
dlserver/: README.md  pyproject.toml
dlserver/dlserver/: config.py  handler_fsm.py  models.py  postprocessing.py  preprocessing.py  serve.py  threaded_server.py  utils.py
dlserver/dlserver/configs/: default.yaml
share/: bts__init__.py  semantic_segmentation_pytorch__init__.py
