[project]
name = "dlserver"
version = "0.0.1"

dependencies = [
    "PyYAML>=6.0",
    "opencv-python-headless",
    "numpy",
    "onnxruntime",
    "onnxruntime-gpu",
    "matplotlib",
    "transformers",
    "torch" # required for the NLP demos
]

[tool.setuptools]
packages = ["dlserver"]

[tool.setuptools.package-data]
dlserver = ["configs/*.yaml"]

[project.scripts]
dlserver = "dlserver.serve:main"
