[project]
name = "dlserver"
version = "1.0.0"

dependencies = [
    "PyYAML>=6.0",
    "opencv-python-headless",
    "numpy",
    "onnxruntime",
    "onnxruntime-gpu",
    "matplotlib",
    "transformers",
    "torch" # required for the NLP demos
]

[tool.setuptools]
packages = ["dlserver"]

[tool.setuptools.package-data]
dlserver = ["configs/*.yaml"]

[project.scripts]
dlserver = "dlserver.serve:main"
